--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,26 +2,78 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
-}
-
 body {
-  color: var(--foreground);
-  background: var(--background);
   font-family: Arial, Helvetica, sans-serif;
 }
 
 @layer utilities {
   .text-balance {
     text-wrap: balance;
+  }
+}
+
+@layer base {
+  :root {
+    --background: 0 0% 98.8%;
+    --foreground: 0 0% 2.4%;
+    --card: 0 0% 98.8%;
+    --card-foreground: 0 0% 2.4%;
+    --popover: 0 0% 98.8%;
+    --popover-foreground: 0 0% 2.4%;
+    --primary: 180 77% 28%;
+    --primary-foreground: 0 0% 98.8%;
+    --secondary: 0 0% 23.5%;
+    --secondary-foreground: 0 0% 98.8%;
+    --muted: 0 0% 23.5%;
+    --muted-foreground: 0 0% 45%;
+    --accent: 24 100% 50%;
+    --accent-foreground: 0 0% 98.8%;
+    --destructive: 0 84.2% 60.2%;
+    --destructive-foreground: 0 0% 98.8%;
+    --border: 0 0% 23.5%;
+    --input: 0 0% 23.5%;
+    --ring: 180 77% 28%;
+    --chart-1: 24 100% 50%;
+    --chart-2: 180 77% 28%;
+    --chart-3: 0 0% 23.5%;
+    --chart-4: 0 0% 2.4%;
+    --chart-5: 0 0% 98.8%;
+    --radius: 0.5rem;
+  }
+  
+  .dark {
+    --background: 0 0% 2.4%;
+    --foreground: 0 0% 98.8%;
+    --card: 0 0% 2.4%;
+    --card-foreground: 0 0% 98.8%;
+    --popover: 0 0% 2.4%;
+    --popover-foreground: 0 0% 98.8%;
+    --primary: 180 77% 28%;
+    --primary-foreground: 0 0% 98.8%;
+    --secondary: 0 0% 23.5%;
+    --secondary-foreground: 0 0% 98.8%;
+    --muted: 0 0% 23.5%;
+    --muted-foreground: 0 0% 65%;
+    --accent: 24 100% 50%;
+    --accent-foreground: 0 0% 98.8%;
+    --destructive: 0 62.8% 30.6%;
+    --destructive-foreground: 0 0% 98.8%;
+    --border: 0 0% 23.5%;
+    --input: 0 0% 23.5%;
+    --ring: 180 77% 28%;
+    --chart-1: 24 100% 50%;
+    --chart-2: 180 77% 28%;
+    --chart-3: 0 0% 23.5%;
+    --chart-4: 0 0% 2.4%;
+    --chart-5: 0 0% 98.8%;
+  }
+}
+
+@layer base {
+  * {
+    @apply border-border;
+  }
+  body {
+    @apply bg-background text-foreground;
   }
 }
